--- a/src/app/components/dialogs/delete-task/delete-task.component.html
+++ b/src/app/components/dialogs/delete-task/delete-task.component.html
@@ -1,10 +1,10 @@
-<div class="delete-task">
-    <h1>Delete task</h1>
-    <div mat-dialog-content>
-      Would you like to delete this task?
-    </div>
-    <div mat-dialog-actions>
-      <button mat-button mat-dialog-close>No</button>
-      <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
-    </div>
+<div class="modal-header">
+    <h4 class="modal-title" id="modal-title">Remove task</h4>
+</div>
+<div class="modal-body">
+<p>  Are you sure you want to delete this task?</p>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn" (click)="closeModal()">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="removeTask(true)">Ok</button>
 </div>
