--- a/src/app/components/dialogs/delete-task/delete-task.component.html
+++ b/src/app/components/dialogs/delete-task/delete-task.component.html
@@ -5,6 +5,6 @@
 <p>  Are you sure you want to delete this task?</p>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn" (click)="closeModal()">Cancel</button>
-    <button type="button" class="btn btn-danger" (click)="removeTask(true)">Ok</button>
+    <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="removeTask(true)">Ok</button>
 </div>
