Added background, icons, and redesigned the whole dashboard component

--- a/src/app/components/dialogs/delete-task/delete-task.component.html
+++ b/src/app/components/dialogs/delete-task/delete-task.component.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="modal-title">Remove task</h4>
+    <h4 class="modal-title" id="modal-title">Remove {{elementName}}</h4>
 </div>
 <div class="modal-body">
-<p>  Are you sure you want to delete this task?</p>
+<p>  Are you sure you want to delete this {{elementName}}?</p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
