--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,6 @@ $prussianBlue: #122E42;
 h1 {
     color: $prussianBlue;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
