--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,4 +1,4 @@
-$listColor: hwb(195 22% 15%);
+$listColor:  rgb(153,50,204);// hwb(195 22% 15%);
 $taskColor: #98C540;
 
 $darkSpringGreen: #2E6B48;
@@ -347,3 +347,38 @@ $prussianBlue: #122E42;
 .mat-tab-group {
     height: 100%;
 }
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-preview .task-title {
+    padding-left: 10px;
+}
+  
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+  
+.task:last-child {
+    border: none;
+}
+  
+.completed-tasks.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder),
+.inprogress-tasks.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-custom-placeholder {
+    background: #ccc;
+    border: dotted 3px #999;
+    min-height: 60px;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+  
