Changed name of 'delete-task' component into 'delete-item' as now works generic

--- a/src/app/components/dialogs/delete-item/delete-item.component.html
+++ b/src/app/components/dialogs/delete-item/delete-item.component.html
@@ -6,5 +6,5 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="removeTask(true)">Ok</button>
+    <button type="button" class="btn btn-success" (click)="removeItem(true)">Ok</button>
 </div>
