--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 
 html, body {
     height: 100%;
-    background: url(assets/images/enchanted-forest.jpg) no-repeat center fixed;
+    background: url(assets/images/greenForest.jpg) no-repeat fixed;
     background-size: cover;
 }
 
