--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -11,8 +11,6 @@ $input-shadow: none;
 
 $prussianBlue: #122E42;
 
-
-
 .list-color {
     color: $listColor;
 }
@@ -54,7 +52,7 @@ $prussianBlue: #122E42;
     max-width: 70%;
     max-height: 80%;
     height: 100%;
-    background: white;
+    background: whitesmoke;
     padding: 20px;
     border-radius: 0 30px 0 30px;
     position: relative;
